--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@ body{
   background:#f4f4f4;
 }
 
+#tooltip-container {
+  position: fixed;
+  background-color: #fff;
+  color: #000;
+  padding: 10px;
+  border: 1px solid;
+  display: none;
+  z-index: 999;
+}
+#tooltip-container .title {
+  margin-right: 0.2em;
+}
 /* svg#Ireland {
   width: 500px;
   height:300px;
